minos fixes: overflow-x scroll on mobile

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -4,9 +4,11 @@
 	display: flex;
 	max-width: var(--wrapper);
 	padding: var(--6x);
+	height: 80px;
 	justify-content: space-between;
 	align-items: center;
 	@extend .custom-bevel;
+
 	span {
 		font-size: var(--p);
 	}
